# konvergenzregelkreis

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
conformance/conflict/: grabowski-pilot-r2-conflicting-deployment.json
conformance/expected/: grabowski-pilot-r2-conflicting-deployment.json  grabowski-pilot-r2-terminal.json  r2-terminal.json  resilience-r2-foundational-terminal.v2.json  systemkatalog-pilot-r2-terminal.json
conformance/invalid/: missing-source-refs.json
conformance/valid/: grabowski-pilot-r2-terminal.json  r2-terminal.json  resilience-r2-foundational-terminal.v2.json  systemkatalog-pilot-r2-terminal.json
docs/: architecture.md  authority-boundaries.md  integration-guide.md  masterplan.md  resilience-evidence-profiles-v2.md  threat-model.md  versioning.md
docs/pilots/: grabowski-deployment-v1.md  systemkatalog-drift-v1.md
profiles/: R0.v1.json  R1.v1.json  R2.v1.json  R3.v1.json  resilience.v2.json
protocol/: README.md  assessment-request.v1.schema.json  assessment-request.v2.schema.json  classification.v1.schema.json  classification.v2.schema.json  closure-receipt.v1.schema.json  closure-receipt.v2.schema.json  effect-receipt.v1.schema.json  evidence-profile.v1.schema.json  evidence-profile.v2.schema.json  observation.v1.schema.json  transition-assessment.v1.schema.json  transition-assessment.v2.schema.json  verification-receipt.v1.schema.json  verification-receipt.v2.schema.json
src/regelkreis/: __init__.py  cli.py  core.py
system/: regelkreis-role.v1.json
tests/: test_core.py
